--- a/src/main/resources/templates/tbnotice/create.html
+++ b/src/main/resources/templates/tbnotice/create.html
@@ -5,7 +5,15 @@
     <title>notice_test</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
+
 </head>
+
+
+<script type="text/javascript">
+    var list_info_tbnoticefile_template = Handlebars.compile(list_info_tbnoticefile);
+</script>
+
 <body>
 test!!
 
@@ -23,17 +31,18 @@ test!!
             type: "POST",
             contentType : 'application/json; charset=utf-8',
             data: JSON.stringify({
-                title : $("#input_title").val()
-                ,cate : $("#input_cate").val()
-                ,content : $("#input_content").val()
+                tbuserId: tbuserId
+                , title: $("#create_tbnotice_title").val()
+                , content: $("#create_tbnotice_content").val()
+                , cate: $("#create_tbnotice_cate").val()
             }),
             cache: false,
             success: (obj_data, status, xhr)=>{
                 alert(JSON.stringify(obj_data));
             },
-            error: (data, status, xhr)=>{
+            error: (data, status, xhr) => {
                 alert("error!!");
-                //alert(JSON.stringify(data));
+                alert(JSON.stringify(data));
             }
         });
     }
