--- a/src/main/resources/templates/tbnotice/mlist.html
+++ b/src/main/resources/templates/tbnotice/mlist.html
@@ -13,7 +13,8 @@
     {{#resultData_tbnotice}}
     <tr class="gradeA">
         <td><font class="font_deleted_{{deleted}} chk_deleted_{{id}}">{{deleted}}</font></td>
-        <td>{{tbuserNick}}</td>
+<!--        <td>{{tbuserNick}}</td>-->
+        <td>{{cate}}</td>
         <td><a href="/tbnotice/detail/{{id}}">{{title}}</a></td>
         <td>{{createdAt}} / {{modifiedAt}}
         <input type="hidden" class="input_tbnotice_created_at" value="{{createdAt}}"/>
@@ -76,7 +77,7 @@ title :
         <thead>
             <tr>
                 <th>삭제여부</th>
-                <th>수신자</th>
+<!--                <th>수신자</th>-->
                 <th>종류</th>
                 <th>제목</th>
                 <th>일시</th>
@@ -132,7 +133,7 @@ title :
                 , perpage : $("#search_tbnotice_perpage").val()
                 , cursor : $("#search_tbnotice_cursor").val()
                 , tbuserId : $("#detail_tbnotice_tbuserId").val()
-                , cate : $("detail_tbnotice_cate").val()
+                , cate : $("#detail_tbnotice_cate").val()
                 , title : $("#detail_tbnotice_title").val()
             },
             cache: false,
