🗑️ Deprecate code that needs to be cleaned up

--- a/src/main/resources/templates/tbpost/detail.html
+++ b/src/main/resources/templates/tbpost/detail.html
@@ -66,14 +66,12 @@ content :
 
 </div>
 
-좋아요 <font class="font_tbpost_liked">-</font>:
-<input type="checkbox" id="detail_tbpost_liked" onchange="toggle_tbpostlike()"/>
-
-<!--<button onclick="toggle_tbpostlike()">like</button>-->
+좋아요 :
+<button onclick="create_tbpostlike()">like</button>
 
 댓글 :
 <input id="create_tbpostcmt_content" type="text" />
-<button onclick="create_tbpostcmt()">create</button>
+<button onclick="toggle_tbpostcmt()">create</button>
 
 <div id="div_create_tbpost_imgs">
 
@@ -264,24 +262,14 @@ content :
             contentType : 'application/json; charset=utf-8',
             data: {
                 id : getIdFromUrl(null)
-                ,tbuserId : localStorage.getItem("myTbuserId")
             },
             cache: false,
             success: (obj_data, status, xhr)=>{
-                //alert(obj_data["liked"]);
+                //alert("success!!");
                 //alert(JSON.stringify(obj_data));
-
-                /*<input type="text" id="detail_tbpost_title" />*/
-
                 let detailKeys = Object.keys(obj_data);
                 for (let eachKey of detailKeys){
-                    let tempType = $("#detail_tbpost_" + eachKey).attr("type");
-                    if(tempType === "checkbox"){
-                        $("#detail_tbpost_" + eachKey).prop("checked", obj_data[eachKey]);
-                    } else {
-                        $("#detail_tbpost_" + eachKey).val(obj_data[eachKey]);
-                    }
-
+                    $("#detail_tbpost_" + eachKey).val(obj_data[eachKey]);
                     $(".font_tbpost_" + eachKey).text(obj_data[eachKey]);
                 }
 
@@ -352,8 +340,7 @@ content :
                 alert(JSON.stringify(data));
             }
         });
-    }
-    function toggle_tbpostlike(){
+    }function toggle_tbpostcmt(){
 
         let tbuserId = localStorage.getItem("myTbuserId");
         if (tbuserId == null || tbuserId === "") {
@@ -362,7 +349,7 @@ content :
         }
 
         $.ajax({
-            url: "/api/tbpostlike/toggle",
+            url: "/api/tbpostlike",
             type: "POST",
             contentType : 'application/json; charset=utf-8',
             data: JSON.stringify({
@@ -372,18 +359,7 @@ content :
             cache: false,
             success: (data, status, xhr)=>{
                 //alert("success!!");
-                //alert(JSON.stringify(data));
-
-                //$("#detail_tbpost_liked").prop("checked", !(data["id"] === "success"));
-                if(data["id"] === "success"){
-                    //alert("좋아요 취소!");
-                    $(".font_tbpost_liked").text(false);
-                    $("#detail_tbpost_liked").prop("checked", false);
-
-                } else {
-                    $(".font_tbpost_liked").text(true);
-                    $("#detail_tbpost_liked").prop("checked", true);
-                }
+                alert(JSON.stringify(data));
             },
             error: (data, status, xhr)=>{
                 alert("error!!");
