--- a/src/main/resources/templates/tbnotice/list.html
+++ b/src/main/resources/templates/tbnotice/list.html
@@ -2,96 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>index</title>
+    <title>test</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
 </head>
 <body>
-
-<script id="list_info_tbnotice" type="text/x-handlebars-template">
-    {{#resultData_tbnotice}}
-    <tr class="gradeA">
-        <td><font class="font_tbnotice_order">-</font></td>
-        <td><font class="font_deleted_{{deleted}} chk_deleted_{{id}}">{{deleted}}</font></td>
-        <td><a href="/tbnotice/detail/{{id}}">{{title}}</a></td>
-        <td>{{createdAt}} / {{modifiedAt}}</td>
-    </tr>
-    {{/resultData_tbnotice}}
-</script>
-<script type="text/javascript">
-    var list_info_tbnotice = $("#list_info_tbnotice").html();
-    var list_info_tbnotice_template = Handlebars.compile(list_info_tbnotice);
-</script>
-
-deleted :
-<select id="detail_tbnotice_deleted">
-    <option value="" selected="selected">전체</option>
-    <option value="N">일반</option>
-    <option value="Y">삭제</option>
-</select>
-cate :
-<input id="detail_tbnotice_cate" type="text" />
-title :
-<input id="detail_tbnotice_title" type="text" />
-Recipient :
-<input id="detail_tbnotice_recipient" type="text" />
-
-<button onclick="list_tbnotice()">list</button>
-
+list!!
 <div>
-    <table>
-        <thead>
-            <tr>
-                <th>삭제여부</th>
-                <th>제목</th>
-                <th>일시</th>
-            </tr>
-        </thead>
-        <tbody id="tbody_tbnotice_list">
-        </tbody>
-    </table>
+    search title : <input type="text" id="search_title" />
 </div>
+<button onclick="func_test()">버튼입니다!</button>
+
+
 <script>
-    $( document ).ready(function() {
-        console.log( "ready!" );
-        list_tbnotice();
-    });
-</script>
-<script>
-    function list_tbnotice(){
+    function func_test(){
         $.ajax({
             url: "/api/tbnotice/list",
             type: "GET",
             contentType : 'application/json; charset=utf-8',
             data: {
-                deleted : $("#detail_tbnotice_deleted").val()
-                , cate : $("#detail_tbnotice_cate").val()
-                , title : $("#detail_tbnotice_title").val()
-                , recipient : $("#detail_tbnotice_recipient").val()
+                title : $("#search_title").val()
             },
             cache: false,
-            success: (data, status, xhr)=>{
-                //alert("success!!");
-                //alert(JSON.stringify(data));
-                $("#tbody_tbnotice_list").html("");
-                let a_list = data;
-                $("#tbody_tbnotice_list").append(list_info_tbnotice_template({"resultData_tbnotice":a_list}));
-
-                let font_tbnotice_order = $(".font_tbnotice_order");
-                for(let i=0;i<font_tbnotice_order.length;i++){
-                    $(font_tbnotice_order[i]).text((i+1));
-                }
-
-
+            success: (obj_data, status, xhr)=>{
+                alert(JSON.stringify(obj_data));
             },
             error: (data, status, xhr)=>{
                 alert("error!!");
-                alert(JSON.stringify(data));
+                //alert(JSON.stringify(data));
             }
         });
     }
 </script>
-
 </body>
 </html>
